[package]
name = "contextual-identities-sys"
version = "0.1.0"
authors = ["Roman Volosatovs <rvolosatovs@riseup.net>"]
edition = "2018"
description = "This crate provides WebAssembly bindings to contextualIdentities Web API"
repository = "https://github.com/rvolosatovs/contextual-identities-sys"
license = "MIT OR Apache-2.0"
keywords = ["api", "ffi", "wasm", "web", "webassembly"]
categories = ["external-ffi-bindings", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.44"
wasm-bindgen-futures = "0.4.17"
wasm-bindgen = "0.2.67"
